--- a/_posts/2022-11-14-cmake-QA.md
+++ b/_posts/2022-11-14-cmake-QA.md
@@ -6,6 +6,9 @@ description: cmake 使用说明
 keywords: cmake
 ---
 
+## 列出项目选项和可设置变量
+`cmake -LA`
+
 ## 设置编译对象属性
 ```cmake
 # 设置编译选项
@@ -26,3 +29,6 @@ target_link_libraries(test libA libB libC)
 # 链接顺序 libA <== libB <== libC 优先使用 libC
 
 ```
+
+## 删除 cmake 安装文件
+`cat install_manifest.txt | sudo xargs rm`
