--- a/_posts/2023-02-28-sha256.md
+++ b/_posts/2023-02-28-sha256.md
@@ -113,7 +113,7 @@ Message block - 512 Bits
 
 ## 逻辑处理
 
-![sha256_logic](..\images\posts\math_knowledge\sha256_logic.svg.png "sha256_logic")
+![sha256_logic](/images/posts/math_knowledge/sha256_logic.svg.png "sha256_logic")
 
 SHA-2 系列压缩函数中的一次迭代。蓝色组件执行以下操作
 
@@ -150,18 +150,18 @@ tips:
 
 **将消息体按512bit分成多个块**
 
-![](..\images\posts\sha2\sha256-1.png )
+![](/images/posts/sha2/sha256-1.png )
 
 **每个块对应64字的大块，一个字32bit**
 
-![](..\images\posts\sha2\sha256-2.jpg )
+![](/images/posts/sha2/sha256-2.jpg )
 
 如上图所示
 
 w16 由前面的字经过移位变换运算得出，以此类推，一直循环算出w63的值
 
 **计算此块的消息摘要**
-![](..\images\posts\sha2\sha256-3.jpg )
+![](/images/posts/sha2/sha256-3.jpg )
 如上图所示，a~h和h0~h7的初值为之前算出前8个质数的平方根的32小数部分，k0~k63为之前算出前64个质数的立方根的32小数部分。根据w0~w63和k0~k63的值经过移位变换运算不断迭代a~h的值，如消息体只有512bit,则sha256的结果值为
 
 ```text
